--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:47:06 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:48:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -139,22 +139,6 @@ body {
   </tr>
   </thead>
   <tbody>
-    <tr>
-      <td class="bigbold">Don Shaw</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -1
--1 thru 8</td>
-      <td>Tiger Woods -1
--1 thru 7</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Sam Burns E
-Not started</td>
-      <td class="greyout leftborder">Corey Conners E
-E thru 1</td>
-      <td class="greyout">Xander Schauffele E
-Not started</td>
-    </tr>
     <tr>
       <td class="bigbold">Barb Wellard</td>
       <td class="bigbold">-2</td>
@@ -188,20 +172,20 @@ Not started</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Jack Fleck</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">Don Shaw</td>
+      <td class="bigbold">-1</td>
       <td>Cameron Smith -1
 -1 thru 8</td>
-      <td>Tiger Woods -1
--1 thru 7</td>
-      <td>Rory McIlroy(W) E
+      <td>Jon Rahm(W) E
 Not started</td>
-      <td>Xander Schauffele E
+      <td>Sam Burns E
 Not started</td>
-      <td class="greyout leftborder">Hideki Matsuyama +1
-+1 thru 7</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 7</td>
+      <td>Corey Conners E
+E thru 2</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Tiger Woods E
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -213,7 +197,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -225,7 +209,7 @@ Not started</td>
       <td>Cameron Smith -1
 -1 thru 8</td>
       <td>Corey Conners(W) E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
@@ -245,11 +229,11 @@ Not started</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Tyrrell Hatton E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Doug Muir</td>
@@ -257,7 +241,7 @@ E thru 6</td>
       <td>Cameron Smith -1
 -1 thru 8</td>
       <td>Scottie Scheffler(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Jordan Spieth E
@@ -273,7 +257,7 @@ Not started</td>
       <td>Robert MacIntyre -1
 -1 thru 3</td>
       <td>Corey Conners(W) E
-E thru 1</td>
+E thru 2</td>
       <td>Daniel Berger E
 E thru 9</td>
       <td>Collin Morikawa E
@@ -295,7 +279,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
     </tr>
@@ -305,7 +289,7 @@ E thru 6</td>
       <td>Cameron Smith(W) -1
 -1 thru 8</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Talor Gooch E
 E thru 10</td>
       <td>Brooks Koepka E
@@ -313,7 +297,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Team Steve</td>
@@ -327,25 +311,9 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Downhill Down Wind</td>
-      <td class="bigbold">-1</td>
-      <td>Tiger Woods -1
--1 thru 7</td>
-      <td>Collin Morikawa(W) E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td class="greyout leftborder">Gary Woodland E
-E thru 2</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -353,7 +321,7 @@ E thru 2</td>
       <td>Cameron Smith(W) -1
 -1 thru 8</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -380,32 +348,16 @@ Not started</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Ez Game Ez Life</td>
-      <td class="bigbold">-1</td>
-      <td>Tiger Woods(W) -1
--1 thru 7</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Rory McIlroy E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 7</td>
-    </tr>
-    <tr>
       <td class="bigbold">Roy Jeffrey B</td>
       <td class="bigbold">-1</td>
       <td>Robert MacIntyre -1
 -1 thru 3</td>
       <td>Scottie Scheffler(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
       <td class="greyout">Jon Rahm E
@@ -417,7 +369,7 @@ Not started</td>
       <td>Cameron Smith(W) -1
 -1 thru 8</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Marc Leishman E
 Not started</td>
       <td>Xander Schauffele E
@@ -449,7 +401,7 @@ Not started</td>
       <td>Cameron Smith -1
 -1 thru 8</td>
       <td>Scottie Scheffler(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Billy Horschel E
@@ -465,7 +417,7 @@ Not started</td>
       <td>Cameron Smith(W) -1
 -1 thru 8</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Jon Rahm E
@@ -481,11 +433,11 @@ Not started</td>
       <td>Cameron Smith(W) -1
 -1 thru 8</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Russell Henley +2
@@ -505,7 +457,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Bubba Watson E
-Not started</td>
+E thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -515,11 +467,11 @@ Not started</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Will Zalatoris E
 Not started</td>
     </tr>
@@ -531,7 +483,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Talor Gooch E
 E thru 10</td>
       <td class="greyout leftborder">Brooks Koepka E
@@ -565,10 +517,26 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +1
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jack Fleck</td>
+      <td class="bigbold">-1</td>
+      <td>Cameron Smith -1
+-1 thru 8</td>
+      <td>Rory McIlroy(W) E
+Not started</td>
+      <td>Xander Schauffele E
+Not started</td>
+      <td>Tiger Woods E
+E thru 8</td>
+      <td class="greyout leftborder">Hideki Matsuyama +1
++1 thru 7</td>
+      <td class="greyout">Justin Thomas +1
 +1 thru 7</td>
     </tr>
     <tr>
@@ -585,7 +553,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Low Golf IQ</td>
@@ -595,7 +563,7 @@ E thru 6</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Brian Harman E
 E thru 12</td>
       <td class="greyout leftborder">Viktor Hovland E
@@ -615,7 +583,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Justin Thomas(W) +1
 +1 thru 7</td>
     </tr>
@@ -679,9 +647,9 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Adam Scott E
-E thru 6</td>
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Albert Selina</td>
@@ -689,11 +657,11 @@ E thru 6</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Webb Simpson E
 Not started</td>
       <td class="greyout">Will Zalatoris E
@@ -767,9 +735,9 @@ Not started</td>
       <td class="bigbold">Matt Wilson</td>
       <td class="bigbold">0</td>
       <td>Scottie Scheffler(W) E
-E thru 6</td>
+E thru 7</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -789,7 +757,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas(W) +1
@@ -839,7 +807,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
@@ -867,13 +835,29 @@ Not started</td>
       <td>Sam Burns E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Downhill Down Wind</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa(W) E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Tiger Woods E
+E thru 8</td>
+      <td class="greyout leftborder">Justin Thomas +1
++1 thru 7</td>
+      <td class="greyout">Gary Woodland +1
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -881,7 +865,7 @@ E thru 6</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -897,12 +881,28 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Rory McIlroy E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
+Not started</td>
+      <td class="greyout">Justin Thomas +1
++1 thru 7</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Ez Game Ez Life</td>
+      <td class="bigbold">0</td>
+      <td>Tiger Woods(W) E
+E thru 8</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Rory McIlroy E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 7</td>
@@ -927,7 +927,7 @@ Not started</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">0</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Rory McIlroy E
@@ -985,17 +985,17 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">0</td>
       <td>Corey Conners E
-E thru 1</td>
+E thru 2</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
@@ -1027,7 +1027,7 @@ Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td>Will Zalatoris E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
@@ -1049,7 +1049,7 @@ Not started</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Jon Hosegood</td>
@@ -1057,13 +1057,13 @@ E thru 6</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Scottie Scheffler E
-E thru 6</td>
+E thru 7</td>
       <td>Will Zalatoris E
 Not started</td>
       <td>Justin Thomas(W) +1
 +1 thru 7</td>
       <td class="greyout leftborder">Tony Finau +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout">Shane Lowry +1
 +1 thru 9</td>
     </tr>
@@ -1077,7 +1077,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td>Tony Finau +1
-+1 thru 6</td>
++1 thru 7</td>
       <td class="greyout leftborder">Shane Lowry +1
 +1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +1
