--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:54:11 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:55:07 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -141,25 +141,25 @@ body {
   <tbody>
     <tr>
       <td class="bigbold">Paxton Watson</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith -1
--1 thru 8</td>
-      <td>Joaquin Niemann -1
--1 thru 8</td>
+      <td class="bigbold">-5</td>
+      <td>Joaquin Niemann -3
+-3 thru 9</td>
+      <td>Cameron Smith -2
+-2 thru 9</td>
       <td>Tommy Fleetwood(W) E
 E thru 9</td>
-      <td>Viktor Hovland E
+      <td>Justin Thomas E
+E thru 8</td>
+      <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
-      <td class="greyout leftborder">Rory McIlroy E
+      <td class="greyout">Rory McIlroy E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -1
--1 thru 8</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
+-2 thru 9</td>
       <td>Scottie Scheffler(W) E
 E thru 7</td>
       <td>Xander Schauffele E
@@ -173,9 +173,9 @@ E thru 2</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -1
--1 thru 8</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -2
+-2 thru 9</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
@@ -189,41 +189,41 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Andrew Winchester</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith -1
--1 thru 8</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith -2
+-2 thru 9</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
       <td>Matthew Fitzpatrick E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
-      <td>Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 7</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 9</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-1</td>
+      <td class="bigbold">-2</td>
+      <td>Daniel Berger -1
+-1 thru 10</td>
       <td>Robert MacIntyre -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Corey Conners(W) E
 E thru 2</td>
       <td>Collin Morikawa E
 Not started</td>
-      <td>Jon Rahm E
+      <td class="greyout leftborder">Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Daniel Berger E
-E thru 9</td>
       <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-1</td>
-      <td>Cameron Smith(W) -1
--1 thru 8</td>
+      <td class="bigbold">-2</td>
+      <td>Cameron Smith(W) -2
+-2 thru 9</td>
       <td>Corey Conners E
 E thru 2</td>
       <td>Viktor Hovland E
@@ -232,24 +232,56 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
+      <td class="greyout">Justin Thomas E
+E thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">-1</td>
+      <td>Daniel Berger -1
+-1 thru 10</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Will Zalatoris E
+Not started</td>
+      <td class="greyout">Tony Finau +1
 +1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Tyrrell Hatton E
 Not started</td>
+      <td class="greyout leftborder">Corey Conners E
+E thru 2</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">0</td>
+      <td>Xander Schauffele(W) E
+Not started</td>
+      <td>Dustin Johnson E
+Not started</td>
+      <td>Justin Thomas E
+E thru 8</td>
       <td>Corey Conners E
 E thru 2</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
+      <td class="greyout leftborder">Louis Oosthuizen +1
 +1 thru 7</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 9</td>
+      <td class="greyout">Russell Henley +1
++1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -265,23 +297,39 @@ Not started</td>
       <td class="greyout leftborder">Patrick Reed E
 E thru 1</td>
       <td class="greyout">Luke List +2
-+2 thru 10</td>
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
       <td class="bigbold">0</td>
       <td>Viktor Hovland(W) E
 Not started</td>
+      <td>Justin Thomas E
+E thru 8</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
 Not started</td>
+      <td class="greyout leftborder">Patrick Cantlay E
+Not started</td>
+      <td class="greyout">Sungjae Im E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout leftborder">Sungjae Im E
+      <td>Scottie Scheffler E
+E thru 7</td>
+      <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout">Justin Thomas +1
+      <td class="greyout leftborder">Tony Finau +1
 +1 thru 7</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -296,38 +344,22 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">0</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td>Daniel Berger E
-E thru 9</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 7</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 7</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">0</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
 Not started</td>
       <td>Jordan Spieth E
 Not started</td>
-      <td>Corey Conners E
+      <td class="greyout leftborder">Corey Conners E
 E thru 2</td>
-      <td class="greyout leftborder">Justin Thomas(W) +1
-+1 thru 7</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
     </tr>
@@ -362,38 +394,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Jon Rahm E
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">1</td>
-      <td>Xander Schauffele(W) E
-Not started</td>
-      <td>Dustin Johnson E
-Not started</td>
-      <td>Corey Conners E
-E thru 2</td>
-      <td>Justin Thomas +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Louis Oosthuizen +1
-+1 thru 7</td>
-      <td class="greyout">Russell Henley +2
-+2 thru 2</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">1</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Scottie Scheffler E
-E thru 7</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td>Justin Thomas(W) +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Tony Finau +1
-+1 thru 7</td>
-      <td class="greyout">Shane Lowry +1
-+1 thru 9</td>
     </tr>
   </tbody>
 </table>
