--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:58:39 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 1:59:32 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -146,30 +146,62 @@ body {
 -3 thru 9</td>
       <td>Cameron Smith -2
 -2 thru 9</td>
-      <td>Tommy Fleetwood(W) E
-E thru 9</td>
       <td>Justin Thomas E
 E thru 8</td>
-      <td class="greyout leftborder">Viktor Hovland E
+      <td>Viktor Hovland E
 Not started</td>
-      <td class="greyout">Rory McIlroy E
+      <td class="greyout leftborder">Rory McIlroy E
 Not started</td>
+      <td class="greyout">Tommy Fleetwood(W) +1
++1 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-2</td>
+      <td class="bigbold">-3</td>
       <td>Cameron Smith -2
 -2 thru 9</td>
+      <td>Corey Conners -1
+-1 thru 3</td>
       <td>Scottie Scheffler(W) E
 E thru 7</td>
       <td>Xander Schauffele E
 Not started</td>
-      <td>Sam Burns E
+      <td class="greyout leftborder">Sam Burns E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-3</td>
+      <td>Corey Conners(W) -1
+-1 thru 3</td>
+      <td>Daniel Berger -1
+-1 thru 10</td>
+      <td>Robert MacIntyre -1
+-1 thru 4</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Neil Hardy</td>
+      <td class="bigbold">-3</td>
+      <td>Cameron Smith(W) -2
+-2 thru 9</td>
+      <td>Corey Conners -1
+-1 thru 3</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout">Corey Conners E
-E thru 2</td>
+      <td class="greyout">Justin Thomas E
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -204,36 +236,52 @@ Not started</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-2</td>
-      <td>Daniel Berger -1
--1 thru 10</td>
-      <td>Robert MacIntyre -1
--1 thru 4</td>
-      <td>Corey Conners(W) E
-E thru 2</td>
-      <td>Collin Morikawa E
+      <td class="bigbold">Derrick Shea</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -1
+-1 thru 3</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
+      <td>Jon Rahm E
 Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
+      <td>Patrick Cantlay E
 Not started</td>
-      <td class="greyout">Jordan Spieth E
+      <td class="greyout leftborder">Tyrrell Hatton E
 Not started</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Neil Hardy</td>
-      <td class="bigbold">-2</td>
-      <td>Cameron Smith(W) -2
--2 thru 9</td>
-      <td>Corey Conners E
-E thru 2</td>
-      <td>Viktor Hovland E
+      <td class="bigbold">Jamie Watters</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -1
+-1 thru 3</td>
+      <td>Xander Schauffele(W) E
 Not started</td>
-      <td>Xander Schauffele E
+      <td>Dustin Johnson E
 Not started</td>
-      <td class="greyout leftborder">Jordan Spieth E
-Not started</td>
-      <td class="greyout">Justin Thomas E
+      <td>Justin Thomas E
 E thru 8</td>
+      <td class="greyout leftborder">Louis Oosthuizen +1
++1 thru 7</td>
+      <td class="greyout">Russell Henley +1
++1 thru 3</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">-1</td>
+      <td>Patrick Reed -1
+-1 thru 2</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Luke List +2
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -252,52 +300,20 @@ Not started</td>
 +1 thru 7</td>
     </tr>
     <tr>
-      <td class="bigbold">Derrick Shea</td>
-      <td class="bigbold">0</td>
+      <td class="bigbold">Adam Ryan</td>
+      <td class="bigbold">-1</td>
+      <td>Corey Conners -1
+-1 thru 3</td>
       <td>Justin Thomas(W) E
 E thru 8</td>
       <td>Jon Rahm E
 Not started</td>
-      <td>Patrick Cantlay E
+      <td>Xander Schauffele E
 Not started</td>
-      <td>Tyrrell Hatton E
+      <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
-      <td class="greyout leftborder">Corey Conners E
-E thru 2</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jamie Watters</td>
-      <td class="bigbold">0</td>
-      <td>Xander Schauffele(W) E
-Not started</td>
-      <td>Dustin Johnson E
-Not started</td>
-      <td>Justin Thomas E
-E thru 8</td>
-      <td>Corey Conners E
-E thru 2</td>
-      <td class="greyout leftborder">Louis Oosthuizen +1
+      <td class="greyout">Louis Oosthuizen +1
 +1 thru 7</td>
-      <td class="greyout">Russell Henley +1
-+1 thru 3</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">0</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Patrick Reed E
-E thru 1</td>
-      <td class="greyout">Luke List +2
-+2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -346,22 +362,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Adam Ryan</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td>Jordan Spieth E
-Not started</td>
-      <td class="greyout leftborder">Corey Conners E
-E thru 2</td>
-      <td class="greyout">Louis Oosthuizen +1
-+1 thru 7</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
