--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:01:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:02:11 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -185,7 +185,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Tiger Woods E
-E thru 8</td>
+E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
@@ -290,14 +290,14 @@ E thru 8</td>
 -2 thru 9</td>
       <td>Corey Conners -1
 -1 thru 3</td>
-      <td>Marc Leishman E
-Not started</td>
       <td>Hideki Matsuyama E
 E thru 8</td>
-      <td class="greyout leftborder">Xander Schauffele E
+      <td>Xander Schauffele E
 Not started</td>
-      <td class="greyout">Justin Thomas E
+      <td class="greyout leftborder">Justin Thomas E
 E thru 8</td>
+      <td class="greyout">Marc Leishman +1
++1 thru 1</td>
     </tr>
     <tr>
       <td class="bigbold">The Resort</td>
@@ -504,8 +504,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
-      <td class="greyout">Justin Rose +1
-+1 thru 3</td>
+      <td class="greyout">Justin Rose +2
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Glitter Girl</td>
@@ -553,7 +553,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas E
 E thru 8</td>
       <td class="greyout">Tiger Woods E
-E thru 8</td>
+E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">The Dub</td>
@@ -770,12 +770,12 @@ Not started</td>
 E thru 8</td>
       <td>Patrick Cantlay E
 Not started</td>
+      <td>Tony Finau E
+E thru 8</td>
       <td>Scottie Scheffler E
 E thru 7</td>
-      <td>Will Zalatoris E
+      <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +1
-+1 thru 7</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 10</td>
     </tr>
@@ -935,7 +935,7 @@ Not started</td>
       <td>Justin Thomas E
 E thru 8</td>
       <td class="greyout leftborder">Tiger Woods E
-E thru 8</td>
+E thru 9</td>
       <td class="greyout">Gary Woodland +1
 +1 thru 3</td>
     </tr>
@@ -943,7 +943,7 @@ E thru 8</td>
       <td class="bigbold">Ez Game Ez Life</td>
       <td class="bigbold">0</td>
       <td>Tiger Woods(W) E
-E thru 8</td>
+E thru 9</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Rory McIlroy E
@@ -1002,6 +1002,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Justin Thomas E
 E thru 8</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Wild Billy Mitchell</td>
+      <td class="bigbold">0</td>
+      <td>Dustin Johnson(W) E
+Not started</td>
+      <td>Tony Finau E
+E thru 8</td>
+      <td>Matthew Fitzpatrick E
+Not started</td>
+      <td>Jordan Spieth E
+Not started</td>
+      <td class="greyout leftborder">Louis Oosthuizen +1
++1 thru 7</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Fred Jamieson</td>
@@ -1066,22 +1082,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Scottie Scheffler E
 E thru 7</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Wild Billy Mitchell</td>
-      <td class="bigbold">1</td>
-      <td>Dustin Johnson(W) E
-Not started</td>
-      <td>Matthew Fitzpatrick E
-Not started</td>
-      <td>Jordan Spieth E
-Not started</td>
-      <td>Tony Finau +1
-+1 thru 7</td>
-      <td class="greyout leftborder">Louis Oosthuizen +1
-+1 thru 7</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
     </tr>
   </tbody>
 </table>
