--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:01:19 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:02:12 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -280,8 +280,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Luke List +2
-+2 thru 11</td>
+      <td class="greyout">Luke List +3
++3 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -296,8 +296,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 7</td>
+      <td class="greyout">Tony Finau E
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Adam Ryan</td>
@@ -342,8 +342,8 @@ Not started</td>
 E thru 7</td>
       <td>Will Zalatoris E
 Not started</td>
-      <td class="greyout leftborder">Tony Finau +1
-+1 thru 7</td>
+      <td class="greyout leftborder">Tony Finau E
+E thru 8</td>
       <td class="greyout">Shane Lowry +2
 +2 thru 10</td>
     </tr>
@@ -376,8 +376,8 @@ Not started</td>
 Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout">Tony Finau +1
-+1 thru 7</td>
+      <td class="greyout">Tony Finau E
+E thru 8</td>
     </tr>
     <tr>
       <td class="bigbold">Matt Tummon</td>
