--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:03:05 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:04:00 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -157,13 +157,13 @@ Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Larry Judge</td>
-      <td class="bigbold">-3</td>
+      <td class="bigbold">-4</td>
       <td>Cameron Smith -2
 -2 thru 9</td>
+      <td>Scottie Scheffler(W) -1
+-1 thru 8</td>
       <td>Corey Conners -1
 -1 thru 3</td>
-      <td>Scottie Scheffler(W) E
-E thru 7</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Sam Burns E
@@ -179,7 +179,7 @@ Not started</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
       <td>Robert MacIntyre -1
--1 thru 4</td>
+-1 thru 5</td>
       <td>Collin Morikawa E
 Not started</td>
       <td class="greyout leftborder">Jon Rahm E
@@ -263,7 +263,7 @@ Not started</td>
       <td>Justin Thomas E
 E thru 8</td>
       <td class="greyout leftborder">Louis Oosthuizen +1
-+1 thru 7</td>
++1 thru 9</td>
       <td class="greyout">Russell Henley +1
 +1 thru 3</td>
     </tr>
@@ -282,6 +282,38 @@ Not started</td>
 Not started</td>
       <td class="greyout">Luke List +3
 +3 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jon Hosegood</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler -1
+-1 thru 8</td>
+      <td>Justin Thomas(W) E
+E thru 8</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td class="greyout leftborder">Tony Finau E
+E thru 8</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Bryson</td>
+      <td class="bigbold">-1</td>
+      <td>Scottie Scheffler(W) -1
+-1 thru 8</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Jordan Spieth E
+Not started</td>
+      <td class="greyout leftborder">Will Zalatoris E
+Not started</td>
+      <td class="greyout">Shane Lowry +2
++2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -313,7 +345,7 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Louis Oosthuizen +1
-+1 thru 7</td>
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Scott Williamson</td>
@@ -330,38 +362,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Sungjae Im E
 Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jon Hosegood</td>
-      <td class="bigbold">0</td>
-      <td>Justin Thomas(W) E
-E thru 8</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Scottie Scheffler E
-E thru 7</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td class="greyout leftborder">Tony Finau E
-E thru 8</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Bryson</td>
-      <td class="bigbold">0</td>
-      <td>Scottie Scheffler(W) E
-E thru 7</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Jordan Spieth E
-Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
-Not started</td>
-      <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
