--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:06:38 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:07:31 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -145,7 +145,7 @@ body {
       <td>Joaquin Niemann -3
 -3 thru 9</td>
       <td>Cameron Smith -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Justin Thomas E
 E thru 8</td>
       <td>Viktor Hovland E
@@ -159,7 +159,7 @@ Not started</td>
       <td class="bigbold">Larry Judge</td>
       <td class="bigbold">-4</td>
       <td>Cameron Smith -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Scottie Scheffler(W) -1
 -1 thru 8</td>
       <td>Corey Conners -1
@@ -191,7 +191,7 @@ Not started</td>
       <td class="bigbold">Neil Hardy</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith(W) -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Corey Conners -1
 -1 thru 3</td>
       <td>Viktor Hovland E
@@ -207,7 +207,7 @@ E thru 8</td>
       <td class="bigbold">John Nixon</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith(W) -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Collin Morikawa E
 Not started</td>
       <td>Brooks Koepka E
@@ -223,7 +223,7 @@ Not started</td>
       <td class="bigbold">Andrew Winchester</td>
       <td class="bigbold">-2</td>
       <td>Cameron Smith -2
--2 thru 9</td>
+-2 thru 10</td>
       <td>Justin Thomas(W) E
 E thru 8</td>
       <td>Matthew Fitzpatrick E
@@ -233,7 +233,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -249,7 +249,7 @@ Not started</td>
       <td class="greyout leftborder">Tyrrell Hatton E
 Not started</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -284,6 +284,22 @@ Not started</td>
 +3 thru 12</td>
     </tr>
     <tr>
+      <td class="bigbold">Scott Williamson</td>
+      <td class="bigbold">-1</td>
+      <td>Sungjae Im -1
+-1 thru 1</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Justin Thomas E
+E thru 8</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Brooks Koepka E
+Not started</td>
+      <td class="greyout">Patrick Cantlay E
+Not started</td>
+    </tr>
+    <tr>
       <td class="bigbold">Jon Hosegood</td>
       <td class="bigbold">-1</td>
       <td>Scottie Scheffler -1
@@ -297,7 +313,7 @@ Not started</td>
       <td class="greyout leftborder">Tony Finau E
 E thru 8</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -313,7 +329,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 10</td>
++2 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Al Shulman</td>
@@ -346,22 +362,6 @@ Not started</td>
 Not started</td>
       <td class="greyout">Louis Oosthuizen +1
 +1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Scott Williamson</td>
-      <td class="bigbold">0</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Justin Thomas E
-E thru 8</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td class="greyout leftborder">Patrick Cantlay E
-Not started</td>
-      <td class="greyout">Sungjae Im E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
