--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:12:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:13:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -161,7 +161,7 @@ Not started</td>
       <td>Joaquin Niemann -3
 -3 thru 9</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Brian Harman -1
 -1 thru 14</td>
       <td>Sam Burns E
@@ -177,7 +177,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Viktor Hovland(W) E
@@ -193,7 +193,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Talor Gooch E
@@ -209,15 +209,15 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
-      <td>Brooks Koepka E
+      <td>Russell Henley E
+E thru 4</td>
+      <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
-      <td class="greyout leftborder">Will Zalatoris E
+      <td class="greyout">Will Zalatoris E
 Not started</td>
-      <td class="greyout">Russell Henley +1
-+1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Mark MacKave</td>
@@ -225,7 +225,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Xander Schauffele(W) E
@@ -241,7 +241,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Sam Burns E
@@ -257,7 +257,7 @@ E thru 9</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Patrick Cantlay E
@@ -273,7 +273,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners(W) -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Jon Rahm E
@@ -291,7 +291,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -1
 -1 thru 8</td>
       <td>Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
@@ -303,7 +303,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners(W) -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
       <td>Robert MacIntyre -1
@@ -353,7 +353,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -369,7 +369,7 @@ E thru 8</td>
       <td>Scottie Scheffler(W) -1
 -1 thru 8</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Robert MacIntyre -1
 -1 thru 5</td>
       <td>Patrick Cantlay E
@@ -385,9 +385,9 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas E
@@ -417,11 +417,11 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Shane Lowry +2
@@ -433,7 +433,7 @@ Not started</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Talor Gooch E
@@ -441,7 +441,7 @@ E thru 12</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Tom Davis</td>
@@ -449,7 +449,7 @@ E thru 8</td>
       <td>Cameron Smith -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Dustin Johnson(W) E
 Not started</td>
       <td>Patrick Cantlay E
@@ -479,7 +479,7 @@ Not started</td>
       <td class="bigbold">Albert Selina</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Jon Rahm(W) E
@@ -497,7 +497,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -1
 -1 thru 8</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm E
 Not started</td>
       <td>Xander Schauffele E
@@ -511,7 +511,7 @@ Not started</td>
       <td class="bigbold">Lyle Rattray</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Patrick Cantlay(W) E
@@ -591,7 +591,7 @@ E thru 2</td>
       <td class="bigbold">Stan and Ollie Garch</td>
       <td class="bigbold">-2</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Scottie Scheffler -1
 -1 thru 8</td>
       <td>Justin Thomas(W) E
@@ -627,7 +627,7 @@ Not started</td>
       <td>Rory McIlroy(W) E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Justin Thomas E
@@ -751,7 +751,7 @@ Not started</td>
       <td class="bigbold">Grace</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Viktor Hovland E
@@ -767,7 +767,7 @@ Not started</td>
       <td class="bigbold">Brian McDonald</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Rory McIlroy E
@@ -783,7 +783,7 @@ E thru 8</td>
       <td class="bigbold">Jabby</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Justin Thomas(W) E
 E thru 8</td>
       <td>Brooks Koepka E
@@ -915,7 +915,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
       <td>Jon Rahm E
 Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
@@ -965,7 +965,7 @@ Not started</td>
       <td>Brooks Koepka E
 Not started</td>
       <td>Hideki Matsuyama E
-E thru 8</td>
+E thru 9</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Justin Thomas E
@@ -984,8 +984,8 @@ Not started</td>
 E thru 8</td>
       <td class="greyout leftborder">Tiger Woods E
 E thru 9</td>
-      <td class="greyout">Gary Woodland +1
-+1 thru 3</td>
+      <td class="greyout">Gary Woodland +2
++2 thru 4</td>
     </tr>
     <tr>
       <td class="bigbold">Ez Game Ez Life</td>
