--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:12:52 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:13:45 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -163,7 +163,7 @@ Not started</td>
       <td>Scottie Scheffler(W) -1
 -1 thru 8</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Xander Schauffele E
 Not started</td>
       <td class="greyout leftborder">Sam Burns E
@@ -175,7 +175,7 @@ Not started</td>
       <td class="bigbold">Chris Sinclair</td>
       <td class="bigbold">-3</td>
       <td>Corey Conners(W) -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Daniel Berger -1
 -1 thru 10</td>
       <td>Robert MacIntyre -1
@@ -193,7 +193,7 @@ Not started</td>
       <td>Cameron Smith(W) -2
 -2 thru 10</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Viktor Hovland E
 Not started</td>
       <td>Xander Schauffele E
@@ -239,7 +239,7 @@ Not started</td>
       <td class="bigbold">Derrick Shea</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Justin Thomas(W) E
 E thru 8</td>
       <td>Jon Rahm E
@@ -255,17 +255,17 @@ Not started</td>
       <td class="bigbold">Jamie Watters</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td>Dustin Johnson E
 Not started</td>
       <td>Justin Thomas E
 E thru 8</td>
-      <td class="greyout leftborder">Louis Oosthuizen +1
+      <td class="greyout leftborder">Russell Henley E
+E thru 4</td>
+      <td class="greyout">Louis Oosthuizen +1
 +1 thru 9</td>
-      <td class="greyout">Russell Henley +1
-+1 thru 3</td>
     </tr>
     <tr>
       <td class="bigbold">Jeff Turnham</td>
@@ -351,7 +351,7 @@ E thru 8</td>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
--1 thru 3</td>
+-1 thru 4</td>
       <td>Justin Thomas(W) E
 E thru 8</td>
       <td>Jon Rahm E
