--- a/sidebet/index.html
+++ b/sidebet/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:30:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:31:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -166,26 +166,10 @@ Not started</td>
 Not started</td>
       <td>Rory McIlroy E
 Not started</td>
-      <td class="greyout leftborder">Tommy Fleetwood(W) +1
-+1 thru 10</td>
-      <td class="greyout">Justin Thomas +1
+      <td class="greyout leftborder">Justin Thomas +1
 +1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -1
--1 thru 4</td>
-      <td>Daniel Berger -1
--1 thru 10</td>
-      <td>Robert MacIntyre -1
--1 thru 6</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
+      <td class="greyout">Tommy Fleetwood(W) +4
++4 thru 11</td>
     </tr>
     <tr>
       <td class="bigbold">Neil Hardy</td>
@@ -233,7 +217,7 @@ E thru 9</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -249,7 +233,7 @@ Not started</td>
       <td class="greyout leftborder">Will Zalatoris E
 Not started</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">John Nixon</td>
@@ -281,7 +265,23 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners(W) -1
+-1 thru 4</td>
+      <td>Robert MacIntyre -1
+-1 thru 6</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Daniel Berger E
+E thru 11</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Derrick Shea</td>
@@ -297,7 +297,7 @@ E thru 1</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Jamie Watters</td>
@@ -316,38 +316,6 @@ E thru 4</td>
 +2 thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Reed -1
--1 thru 3</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Brooks Koepka E
-Not started</td>
-      <td class="greyout">Luke List +3
-+3 thru 13</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 10</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Will Zalatoris E
-Not started</td>
-      <td class="greyout leftborder">Tony Finau E
-E thru 9</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
-    </tr>
-    <tr>
       <td class="bigbold">Adam Ryan</td>
       <td class="bigbold">-1</td>
       <td>Corey Conners -1
@@ -362,6 +330,38 @@ Not started</td>
 +1 thru 9</td>
       <td class="greyout">Louis Oosthuizen +2
 +2 thru 10</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">0</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td class="greyout leftborder">Patrick Reed E
+E thru 4</td>
+      <td class="greyout">Luke List +3
++3 thru 14</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Will Zalatoris E
+Not started</td>
+      <td>Tony Finau E
+E thru 9</td>
+      <td class="greyout leftborder">Daniel Berger E
+E thru 11</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Shane Tummon-Not Paid</td>
