--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ body {
 <table class="styled-table">
   <thead>
   <tr>
-    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:30:49 PM EDT</th>
+    <th style="font-size: 0.7em;">Last Updated</br>Apr 07, 2:31:41 PM EDT</th>
     <th>Score</th>
     <th>Best</th>
     <th>#2</th>
@@ -165,7 +165,7 @@ E thru 1</td>
       <td>Corey Conners -1
 -1 thru 4</td>
       <td>Talor Gooch E
-E thru 12</td>
+E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Xander Schauffele E
@@ -199,6 +199,22 @@ Not started</td>
       <td>Xander Schauffele(W) E
 Not started</td>
       <td class="greyout leftborder">Viktor Hovland E
+Not started</td>
+      <td class="greyout">Will Zalatoris E
+Not started</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Albert Selina</td>
+      <td class="bigbold">-4</td>
+      <td>Scottie Scheffler -2
+-2 thru 9</td>
+      <td>Corey Conners -1
+-1 thru 4</td>
+      <td>Webb Simpson -1
+-1 thru 2</td>
+      <td>Jon Rahm(W) E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Will Zalatoris E
 Not started</td>
@@ -265,7 +281,7 @@ Not started</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey B</td>
@@ -332,22 +348,6 @@ Not started</td>
 E thru 10</td>
     </tr>
     <tr>
-      <td class="bigbold">Albert Selina</td>
-      <td class="bigbold">-3</td>
-      <td>Scottie Scheffler -2
--2 thru 9</td>
-      <td>Corey Conners -1
--1 thru 4</td>
-      <td>Jon Rahm(W) E
-Not started</td>
-      <td>Xander Schauffele E
-Not started</td>
-      <td class="greyout leftborder">Webb Simpson E
-E thru 1</td>
-      <td class="greyout">Will Zalatoris E
-Not started</td>
-    </tr>
-    <tr>
       <td class="bigbold">Hadrian&#39;s Wall</td>
       <td class="bigbold">-3</td>
       <td>Cameron Smith -2
@@ -393,22 +393,6 @@ Not started</td>
       <td class="greyout leftborder">Jordan Spieth E
 Not started</td>
       <td class="greyout">Will Zalatoris E
-Not started</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Chris Sinclair</td>
-      <td class="bigbold">-3</td>
-      <td>Corey Conners(W) -1
--1 thru 4</td>
-      <td>Daniel Berger -1
--1 thru 10</td>
-      <td>Robert MacIntyre -1
--1 thru 6</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
 Not started</td>
     </tr>
     <tr>
@@ -473,7 +457,7 @@ E thru 9</td>
       <td class="greyout leftborder">Jon Rahm E
 Not started</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Stan and Ollie Garch</td>
@@ -489,7 +473,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Ron Harrington</td>
@@ -501,7 +485,7 @@ Not started</td>
       <td>Jon Rahm(W) E
 Not started</td>
       <td>Talor Gooch E
-E thru 12</td>
+E thru 13</td>
       <td class="greyout leftborder">Brooks Koepka E
 Not started</td>
       <td class="greyout">Hideki Matsuyama E
@@ -519,7 +503,7 @@ Not started</td>
       <td>Patrick Cantlay E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
       <td class="greyout">Louis Oosthuizen +2
 +2 thru 10</td>
     </tr>
@@ -537,7 +521,7 @@ E thru 15</td>
       <td class="greyout leftborder">Viktor Hovland E
 Not started</td>
       <td class="greyout">Shane Lowry(W) +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Santorini Sunsets</td>
@@ -569,7 +553,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">CRED</td>
@@ -585,7 +569,7 @@ Not started</td>
       <td class="greyout leftborder">Xander Schauffele E
 Not started</td>
       <td class="greyout">Adam Scott E
-E thru 8</td>
+E thru 9</td>
     </tr>
     <tr>
       <td class="bigbold">Philip Dale</td>
@@ -602,6 +586,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Justin Thomas(W) +1
 +1 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Chris Sinclair</td>
+      <td class="bigbold">-2</td>
+      <td>Corey Conners(W) -1
+-1 thru 4</td>
+      <td>Robert MacIntyre -1
+-1 thru 6</td>
+      <td>Daniel Berger E
+E thru 11</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td class="greyout leftborder">Jon Rahm E
+Not started</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Chris Bryson</td>
@@ -649,7 +649,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Benjac</td>
@@ -713,7 +713,7 @@ Not started</td>
       <td class="greyout leftborder">Justin Thomas(W) +1
 +1 thru 9</td>
       <td class="greyout">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
     </tr>
     <tr>
       <td class="bigbold">Wylie</td>
@@ -762,38 +762,6 @@ Not started</td>
 E thru 10</td>
       <td class="greyout">Justin Thomas +1
 +1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Al Shulman</td>
-      <td class="bigbold">-1</td>
-      <td>Daniel Berger -1
--1 thru 10</td>
-      <td>Patrick Cantlay E
-Not started</td>
-      <td>Viktor Hovland E
-Not started</td>
-      <td>Jon Rahm E
-Not started</td>
-      <td class="greyout leftborder">Xander Schauffele E
-Not started</td>
-      <td class="greyout">Justin Thomas(W) +1
-+1 thru 9</td>
-    </tr>
-    <tr>
-      <td class="bigbold">Jeff Turnham</td>
-      <td class="bigbold">-1</td>
-      <td>Patrick Reed -1
--1 thru 3</td>
-      <td>Viktor Hovland(W) E
-Not started</td>
-      <td>Brooks Koepka E
-Not started</td>
-      <td>Collin Morikawa E
-Not started</td>
-      <td class="greyout leftborder">Jon Rahm E
-Not started</td>
-      <td class="greyout">Jordan Spieth E
-Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Grace</td>
@@ -924,6 +892,22 @@ Not started</td>
 Out With Injury</td>
     </tr>
     <tr>
+      <td class="bigbold">Al Shulman</td>
+      <td class="bigbold">0</td>
+      <td>Daniel Berger E
+E thru 11</td>
+      <td>Patrick Cantlay E
+Not started</td>
+      <td>Viktor Hovland E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Xander Schauffele E
+Not started</td>
+      <td class="greyout">Justin Thomas(W) +1
++1 thru 9</td>
+    </tr>
+    <tr>
       <td class="bigbold">Glen Wilson</td>
       <td class="bigbold">0</td>
       <td>Sam Burns E
@@ -954,6 +938,22 @@ Not started</td>
 Not started</td>
       <td class="greyout">Justin Thomas(W) +1
 +1 thru 9</td>
+    </tr>
+    <tr>
+      <td class="bigbold">Jeff Turnham</td>
+      <td class="bigbold">0</td>
+      <td>Viktor Hovland(W) E
+Not started</td>
+      <td>Brooks Koepka E
+Not started</td>
+      <td>Collin Morikawa E
+Not started</td>
+      <td>Jon Rahm E
+Not started</td>
+      <td class="greyout leftborder">Patrick Reed E
+E thru 4</td>
+      <td class="greyout">Jordan Spieth E
+Not started</td>
     </tr>
     <tr>
       <td class="bigbold">Roy Jeffrey A</td>
@@ -1063,7 +1063,7 @@ Not started</td>
       <td>Jordan Spieth E
 Not started</td>
       <td class="greyout leftborder">Shane Lowry +2
-+2 thru 11</td>
++2 thru 12</td>
       <td class="greyout">Louis Oosthuizen +2
 +2 thru 10</td>
     </tr>
